--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
         </li>
         <li class="categories__item">
           <h2 class="categories__heading categories__heading--pro">Набор массы</h2>
-          <p class="categories__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="categories__text">Заработать авторитет среди дворовых котов<br> и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!</p>
           <a class="categories-button" href="#">Каталог PRO</a>
         </li>
       </ul>
