--- a/source/index.html
+++ b/source/index.html
@@ -16,14 +16,14 @@
     <nav class="main-nav main-nav--closed">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a class="site-list__link">Главная</a>
+        <li class="site-list__item site-list__item--active site-list__item--active-white">
+          <a class="site-list__link site-list__link--color-white">Главная</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          <a class="site-list__link site-list__link--color-white" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="program-form.html">Подбор программы</a>
+          <a class="site-list__link site-list__link--color-white" href="program-form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
