--- a/source/index.html
+++ b/source/index.html
@@ -54,10 +54,10 @@
     <section class="how-it-works">
       <h2 class="how-it-works__heading">Как это работает</h2>
       <ul class="how-it-works__list">
-        <li class="how-it-works__item">Функциональное питание содержит только полезные питательные вещества.</li>
-        <li class="how-it-works__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-        <li class="how-it-works__item">Замените один-два приема обычной еды на наше фунцкциональное питание.</li>
-        <li class="how-it-works__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        <li class="how-it-works__item"><p>Функциональное питание содержит только полезные питательные вещества.</p></li>
+        <li class="how-it-works__item"><p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p></li>
+        <li class="how-it-works__item"><p>Замените один-два приема обычной еды на наше фунцкциональное питание.</p></li>
+        <li class="how-it-works__item"><p>Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</p></li>
       </ul>
     </section>
     <section class="real-example">
