--- a/source/index.html
+++ b/source/index.html
@@ -68,14 +68,14 @@
           <dl class="real-example__stats">
             <div class="real-example__wrapper-item">
               <dt class="real-example__value">5 кг</dt>
-              <dd class="real-example__field">Снижение<br>веса</dd>
+              <dd class="real-example__field">Снижение<br> веса</dd>
             </div>
             <div class="real-example__wrapper-item">
               <dt class="real-example__value">60 дней</dt>
-              <dd class="real-example__field">Затрачено<br>времени</dd>
+              <dd class="real-example__field">Затрачено<br> времени</dd>
             </div>
           </dl>
-          <p class="real-example__totals">Затраты на питание: 15 000 руб.</p>
+          <p class="real-example__totals">Затраты на питание:<br> <span>15 000 руб.</span></p>
         </div>
       </section>
       <section class="real-example__galery">
@@ -84,10 +84,10 @@
           <img class="real-example__item" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
         </div>
         <div class="real-example__controls">
-          <label class="real-example__scale-before"><input type="radio" name="radio-before" value="before">Было</label>
-          <label class="real-example__scale-after"><input type="radio" name="radio-after" value="after">Стало</label>
+          <label class="real-example__scale-before"><input type="radio" name="radio-example" value="before">Было</label>
+          <label class="real-example__scale-after"><input type="radio" name="radio-example" value="after">Стало</label>
           <div class="real-example__toogls">
-            <div class="real-example__toogle-beaore"></div>
+            <div class="real-example__toogle-before"></div>
             <div class="real-example__toogle-after"></div>
           </div>
         </div>
