--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,151 +36,165 @@
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy PRO 500 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">700 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> PRO 500 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-            <h2 class="card-product__heading">Cat Energy PRO 1000 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">1000 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> PRO 1000 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy PRO 500 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">700 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> PRO 500 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy PRO 1000 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">1000 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> PRO 1000 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy SLIM 500 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">400 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> SLIM 500 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">400 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy SLIM 1000 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">700 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> SLIM 1000 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
             <img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-            <h2 class="card-product__heading">Cat Energy SLIM 500 г</h2>
-            <table class="card-product__product-characteristics">
-              <tr>
-                <td class="card-product__field">Объем</td>
-                <td class="card-product__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Вкус</td>
-                <td class="card-product__value">Рис</td>
-              </tr>
-              <tr>
-                <td class="card-product__field">Цена</td>
-                <td class="card-product__value">500 Р.</td>
-              </tr>
-            </table>
+            <div class="card-product__wrapper">
+              <h2 class="card-product__heading">Cat Energy<br> SLIM 500 г</h2>
+              <table class="card-product__product-characteristics">
+                <tr>
+                  <td class="card-product__field">Объем</td>
+                  <td class="card-product__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Вкус</td>
+                  <td class="card-product__value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="card-product__field">Цена</td>
+                  <td class="card-product__value">500 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
+        <li class="catalog__item card-product more-products">
           <b class="more-product__all-goods">Показать еще 100500 товаров</b>
           <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
           <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
@@ -196,7 +210,7 @@
                 <table class="additional-products__characteristics">
                   <tr>
                     <td class="additional-products__field">1 упаковка</td>
-                    <td class="additional-products__field">100 Р.</td>
+                    <td class="additional-products__value">100 Р.</td>
                   </tr>
                 </table>
               </div>
