--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог интернет-магазина Кэт энерджи</title>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -9,11 +10,11 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
       <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--closed">
+    <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
@@ -35,9 +36,9 @@
       <ul class="catalog__list">
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> PRO 500 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 500 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -58,9 +59,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+            <a href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> PRO 1000 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 1000 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -81,9 +82,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> PRO 500 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 500 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -104,9 +105,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> PRO 1000 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 1000 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -127,9 +128,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> SLIM 500 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 500 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -150,9 +151,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> SLIM 1000 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 1000 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -173,9 +174,9 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <a href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <h2 class="card-product__heading">Cat Energy<br> SLIM 500 г</h2>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 500 г</h3></a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -200,73 +201,73 @@
           <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
         </li>
       </ul>
-      <div class="catalog__wrapper-additional-products">
-        <section class="catalog__additional-products additional-products">
-          <h2 class="additional-products__title">Дополнительные товары</h2>
-          <ul class="additional-products__list">
-            <li class="additional-products__item">
-              <div class="additional-products__wrapper">
-                <h3 class="additional-products__heading">Сахарозаменитель</h3>
-                <table class="additional-products__characteristics">
-                  <tr>
-                    <td class="additional-products__field">1 упаковка</td>
-                    <td class="additional-products__value">100 Р.</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="additional-products__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-products__item">
-              <div class="additional-products__wrapper">
-                <h3 class="additional-products__heading">Питьевая вода</h3>
-                <table class="additional-products__characteristics">
-                  <tr>
-                    <td class="additional-products__field">5 литров</td>
-                    <td class="additional-products__value">50 Р.</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="additional-products__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-products__item">
-              <div class="additional-products__wrapper">
-                <h3 class="additional-products__heading">Молоко</h3>
-                <table class="additional-products__characteristics">
-                  <tr>
-                    <td class="additional-products__field">1 литр</td>
-                    <td class="additional-products__value">100 Р.</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="additional-products__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-products__item">
-              <div class="additional-products__wrapper">
-                <h3 class="additional-products__heading">Витамины</h3>
-                <table class="additional-products__characteristics">
-                  <tr>
-                    <td class="additional-products__field">1 упаковка (30 г)</td>
-                    <td class="additional-products__value">300 Р.</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="additional-products__button button" href="#">Заказать</a>
-            </li>
-          </ul>
-        </section>
-        <section class="promo">
-          <b class="promo__slogan">Закажите все<br>и получите чехол для<br>кота в подарок!</b>
-        </section>
-      </div>
     </section>
+    <div class="catalog-main__wrapper-additional-products">
+      <section class="additional-products">
+        <h2 class="additional-products__title">Дополнительные товары</h2>
+        <ul class="additional-products__list">
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__heading">Сахарозаменитель</h3>
+              <table class="additional-products__characteristics">
+                <tr>
+                  <td class="additional-products__field">1 упаковка</td>
+                  <td class="additional-products__value">100 Р.</td>
+                </tr>
+              </table>
+            </div>
+            <a class="additional-products__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__heading">Питьевая вода</h3>
+              <table class="additional-products__characteristics">
+                <tr>
+                  <td class="additional-products__field">5 литров</td>
+                  <td class="additional-products__value">50 Р.</td>
+                </tr>
+              </table>
+            </div>
+            <a class="additional-products__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__heading">Молоко</h3>
+              <table class="additional-products__characteristics">
+                <tr>
+                  <td class="additional-products__field">1 литр</td>
+                  <td class="additional-products__value">100 Р.</td>
+                </tr>
+              </table>
+            </div>
+            <a class="additional-products__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__heading">Витамины</h3>
+              <table class="additional-products__characteristics">
+                <tr>
+                  <td class="additional-products__field">1 упаковка (30 г)</td>
+                  <td class="additional-products__value">300 Р.</td>
+                </tr>
+              </table>
+            </div>
+            <a class="additional-products__button button" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="promo">
+        <b class="promo__slogan">Закажите все<br>и получите чехол для<br>кота в подарок!</b>
+      </section>
+    </div>
     <section class="contacts">
-      <section class="contacts__cooperation cooperation">
-        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
-        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-      <section class="contacts__map map">
+      <div class="contacts__cooperation">
+        <b>Приглашаем <br> к сотрудничеству дилеров!</b>
+        <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="contacts__map map">
         <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
-      </section>
+      </div>
     </section>
   </main>
 
@@ -291,22 +292,7 @@
     </section>
   </footer>
 
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-  </script>
+  <script src="script/script-menu-mobile.js"></script>
 
 </body>
 </html>
