--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Кэт энерджи</title>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -13,7 +14,7 @@
       <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
       <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--closed">
+    <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active site-list__item--active-white">
@@ -42,12 +43,12 @@
         <li class="categories__item">
           <h2 class="categories__heading categories__heading--slim">Похудение</h2>
           <p class="categories__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-button" href="#">Каталог SLIM</a>
+          <a class="categories__button" href="#">Каталог SLIM</a>
         </li>
         <li class="categories__item">
           <h2 class="categories__heading categories__heading--pro">Набор массы</h2>
           <p class="categories__text">Заработать авторитет среди дворовых котов<br> и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!</p>
-          <a class="categories-button" href="#">Каталог PRO</a>
+          <a class="categories__button" href="#">Каталог PRO</a>
         </li>
       </ul>
     </section>
@@ -60,7 +61,7 @@
         <li class="how-it-works__item"><p>Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</p></li>
       </ul>
     </section>
-    <section class="real-example">
+    <div class="real-example">
       <section class="real-example__history">
         <h2 class="real-example__heading">Живой пример</h2>
         <p class="real-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
@@ -80,8 +81,12 @@
       </section>
       <section class="real-example__galery">
         <div class="real-example__list">
-          <img class="real-example__item" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
-          <img class="real-example__item" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
+          <div class="real-example__overflow">
+            <img class="real-example__item" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
+          </div>
+          <div class="real-example__overflow">
+            <img class="real-example__item" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
+          </div>
         </div>
         <div class="real-example__controls">
           <label class="real-example__scale-before"><input type="radio" name="radio-example" value="before">Было</label>
@@ -92,15 +97,15 @@
           </div>
         </div>
       </section>
-    </section>
+    </div>
     <section class="contacts">
-      <section class="contacts__cooperation cooperation">
-        <b class="cooperation__heading">Приглашаем <br> к сотрудничеству дилеров!</b>
-        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-      <section class="contacts__map map">
+      <div class="contacts__cooperation">
+        <b>Приглашаем <br> к сотрудничеству дилеров!</b>
+        <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="contacts__map map">
         <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
-      </section>
+      </div>
     </section>
   </main>
 
@@ -125,22 +130,7 @@
     </section>
   </footer>
 
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-  </script>
+  <script src="script/script-menu-mobile.js"></script>
 
 </body>
 </html>
