Стилизация карточек и ещекалки на мобильной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 500 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
+              <span class="card-product__packaging-pro">500 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -61,7 +62,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 1000 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
+              <span class="card-product__packaging-pro">1000 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -84,7 +86,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 500 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
+              <span class="card-product__packaging-pro">500 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -107,7 +110,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO 1000 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
+              <span class="card-product__packaging-pro">1000 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -130,7 +134,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 500 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
+              <span class="card-product__packaging-slim">500 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -153,7 +158,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 1000 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
+              <span class="card-product__packaging-slim">1000 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -176,7 +182,8 @@
           <article class="card-product__item">
             <a href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM 500 г</h3></a>
+              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
+              <span class="card-product__packaging-slim">500 г</span>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -292,7 +299,7 @@
     </section>
   </footer>
 
-  <script src="script/script-menu-mobile.js"></script>
+  <script src="js/script-menu-mobile.js"></script>
 
 </body>
 </html>
