--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
     </section>
   </footer>
 
-  <script src="script/script-menu-mobile.js"></script>
+  <script src="js/script-menu-mobile.js"></script>
 
 </body>
 </html>
