--- a/source/program-form.html
+++ b/source/program-form.html
@@ -173,7 +173,7 @@
     </section>
   </footer>
 
-  <script src="script/script-menu-mobile.js"></script>
+  <script src="js/script-menu-mobile.js"></script>
 
 </body>
 </html>
