Стилизация карточек товаров на планшете

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -273,7 +273,7 @@
         <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="contacts__map map">
-        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+        <img class="map__image" src="http://via.placeholder.com/320x365" width="320" height="365" alt="Карта">
       </div>
     </section>
   </main>
