Черновая стилизация чекбоксов и радио

--- a/source/program-form.html
+++ b/source/program-form.html
@@ -60,19 +60,17 @@
             <legend class="visually-hidden">Цель программы</legend>
             <ul class="picking-program__list-categories">
               <li class="picking-program__item">
-                <label class="picking-program__label-toogle label">
-                  <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="diet" checked>
-                  Похудение
-                </label>
+                <input class="visually-hidden picking-program__input-radio input-radio" id="slim" type="radio" name="goal-program" value="diet" checked>
+                <label class="picking-program__label-radio label" for="slim">Похудение</label>
               </li>
               <li class="picking-program__item">
-                <label class="picking-program__label-toogle label">
+                <label class="picking-program__label-radio label">
                   <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="mass">
                   Набор массы
                 </label>
               </li>
               <li class="picking-program__item">
-                <label class="picking-program__label-toogle label" for="no-savvy">
+                <label class="picking-program__label-radio label" for="no-savvy">
                   <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="advice">
                   Не знаю (нужен Ваш совет)
                 </label>
@@ -107,25 +105,25 @@
           <legend class="picking-program__legend-additionally">Дополнительно</legend>
           <ul class="picking-program__list-additionally">
             <li class="picking-program__item">
-              <label class="picking-program__label-toogle label">
+              <label class="picking-program__label-checkbox label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="sweetener" checked>
                 Сахарозаменитель
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-toogle label">
+              <label class="picking-program__label-checkbox label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="water">
                 Питьевая вода
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-toogle label">
+              <label class="picking-program__label-checkbox label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="milk">
                 Молоко
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-toogle label">
+              <label class="picking-program__label-checkbox label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="vitamins">
                 Витамины
               </label>
