--- a/source/program-form.html
+++ b/source/program-form.html
@@ -105,28 +105,20 @@
           <legend class="picking-program__legend-additionally">Дополнительно</legend>
           <ul class="picking-program__list-additionally">
             <li class="picking-program__item">
-              <label class="picking-program__label-checkbox label">
-                <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="sweetener" checked>
-                Сахарозаменитель
-              </label>
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="sugar" type="checkbox" name="sweetener" checked>
+              <label class="picking-program__label-checkbox label" for="sugar">Сахарозаменитель</label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-checkbox label">
-                <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="water">
-                Питьевая вода
-              </label>
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="water" type="checkbox" name="water">
+              <label class="picking-program__label-checkbox label" for="water">Питьевая вода</label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-checkbox label">
-                <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="milk">
-                Молоко
-              </label>
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="milk" type="checkbox" name="milk">
+              <label class="picking-program__label-checkbox label" for="milk">Молоко</label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label-checkbox label">
-                <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="vitamins">
-                Витамины
-              </label>
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="vitamins" type="checkbox" name="vitamins">
+              <label class="picking-program__label-checkbox label" for="vitamins">Витамины</label>
             </li>
           </ul>
         </fieldset>
