--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Кэт энерджи</title>
-  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="desktop-header-background">
@@ -15,7 +14,7 @@
       <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active site-list__item--active-white">
           <a class="site-list__link site-list__link--color-white">Главная</a>
@@ -98,16 +97,17 @@
         </div>
       </section>
     </div>
-    <section class="contacts">
-      <div class="contacts__cooperation">
-        <b>Приглашаем <br> к сотрудничеству дилеров!</b>
-        <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </div>
-      <div class="contacts__map map">
-        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
-      </div>
-    </section>
   </main>
+
+  <section class="contacts">
+    <div class="contacts__cooperation">
+      <b>Приглашаем <br> к сотрудничеству дилеров!</b>
+      <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </div>
+    <div class="contacts__map map">
+      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+    </div>
+  </section>
 
   <footer class="page-footer">
     <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
