--- a/source/program-form.html
+++ b/source/program-form.html
@@ -59,20 +59,28 @@
             <legend class="visually-hidden">Цель программы</legend>
             <ul class="picking-program__list-categories">
               <li class="picking-program__item">
-                <input class="visually-hidden picking-program__input-radio input-radio" id="slim" type="radio" name="goal-program" value="diet" checked>
-                <label class="picking-program__label-radio label" for="slim">Похудение</label>
+                <p>
+                  <label class="radio">
+                    <input class="visually-hidden radio__control" type="radio" name="radio">
+                    <span class="radio__label label">Похудение</span>
+                  </label>
+                </p>
               </li>
               <li class="picking-program__item">
-                <label class="picking-program__label-radio label">
-                  <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="mass">
-                  Набор массы
-                </label>
+                <p>
+                  <label class="radio">
+                    <input class="visually-hidden radio__control" type="radio" name="radio">
+                    <span class="radio__label label">Набор массы</span>
+                  </label>
+                </p>
               </li>
               <li class="picking-program__item">
-                <label class="picking-program__label-radio label" for="no-savvy">
-                  <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="advice">
-                  Не знаю (нужен Ваш совет)
-                </label>
+                <p>
+                  <label class="radio">
+                    <input class="visually-hidden radio__control" type="radio" name="radio">
+                    <span class="radio__label label">Не знаю (нужен Ваш совет)</span>
+                  </label>
+                </p>
               </li>
             </ul>
           </fieldset>
@@ -104,20 +112,36 @@
           <legend class="picking-program__legend-additionally">Дополнительно</legend>
           <ul class="picking-program__list-additionally">
             <li class="picking-program__item">
-              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="sugar" type="checkbox" name="sweetener" checked>
-              <label class="picking-program__label-checkbox label" for="sugar">Сахарозаменитель</label>
+              <p>
+                <label class="checkbox">
+                  <input class="visually-hidden checkbox__control" type="checkbox" name="sweetener">
+                  <span class="checkbox__label label">Сахарозаменитель</span>
+                </label>
+              </p>
             </li>
             <li class="picking-program__item">
-              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="water" type="checkbox" name="water">
-              <label class="picking-program__label-checkbox label" for="water">Питьевая вода</label>
+              <p>
+                <label class="checkbox">
+                  <input class="visually-hidden checkbox__control" type="checkbox" name="water">
+                  <span class="checkbox__label label">Питьевая вода</span>
+                </label>
+              </p>
             </li>
             <li class="picking-program__item">
-              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="milk" type="checkbox" name="milk">
-              <label class="picking-program__label-checkbox label" for="milk">Молоко</label>
+              <p>
+                <label class="checkbox">
+                  <input class="visually-hidden checkbox__control" type="checkbox" name="milk">
+                  <span class="checkbox__label label">Молоко</span>
+                </label>
+              </p>
             </li>
             <li class="picking-program__item">
-              <input class="visually-hidden picking-program__input-checkbox input-checkbox" id="vitamins" type="checkbox" name="vitamins">
-              <label class="picking-program__label-checkbox label" for="vitamins">Витамины</label>
+              <p>
+                <label class="checkbox">
+                  <input class="visually-hidden checkbox__control" type="checkbox" name="vitamins">
+                  <span class="checkbox__label label">Витамины</span>
+                </label>
+              </p>
             </li>
           </ul>
         </fieldset>
