--- a/source/index.html
+++ b/source/index.html
@@ -6,37 +6,46 @@
   <title>Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body class="desktop-header-background">
+<body>
 
-  <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
-      <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active site-list__item--active-white">
-          <a class="site-list__link site-list__link--color-white">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link site-list__link--color-white" href="catalog.html">Каталог продукции</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link site-list__link--color-white" href="program-form.html">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="page-main">
-    <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
-    <section class="page-main__program-banner program-banner">
+  <div class="banner-wrap">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <picture>
+          <source media="(min-width: 1300px)" src="img/logo-mobile-header.svg" width="202" height="59">
+          <source media="(min-width: 768px)" src="img/logo-mobile-header.svg" width="173" height="58">
+          <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
+        </picture>
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active site-list__item--active-white">
+            <a class="site-list__link site-list__link--color-white">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--color-white" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--color-white" href="program-form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="program-banner">
       <h2 class="program-banner__heading">Функциональное<br>питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
       <a class="program-banner__button button button--theme-green" href="program-form.html">Подобрать программу</a>
-      <img class="program-banner__product" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Продукт Cat Energy с курицей">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="http://via.placeholder.com/552x499">
+        <source media="(min-width: 768px)" srcset="http://via.placeholder.com/509x609">
+        <img class="program-banner__product" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Продукт Cat Energy с курицей">
+      </picture>
     </section>
+  </div>
+
+  <main class="page-main">
+    <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
     <section class="categories">
       <ul class="categories__list">
         <li class="categories__item">
