Промо-баннер готовая стилизация

--- a/source/index.html
+++ b/source/index.html
@@ -35,11 +35,9 @@
       <h2 class="program-banner__heading">Функциональное<br>питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
       <a class="program-banner__button button button--theme-green" href="program-form.html">Подобрать программу</a>
-      <picture>
-        <source media="(min-width: 1300px)" srcset="http://via.placeholder.com/552x499">
-        <source media="(min-width: 768px)" srcset="http://via.placeholder.com/509x609">
+        <img class="program-banner__desktop" src="http://via.placeholder.com/552x499">
+        <img class="program-banner__tablet" src="http://via.placeholder.com/709x609">
         <img class="program-banner__product" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Продукт Cat Energy с курицей">
-      </picture>
     </section>
   </div>
 
