Блок Живой пример

--- a/source/index.html
+++ b/source/index.html
@@ -87,20 +87,20 @@
       <section class="real-example__galery">
         <div class="real-example__list">
           <div class="real-example__overflow">
-            <img class="real-example__item" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
+            <img class="real-example__item real-example__item--before" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
           </div>
           <div class="real-example__overflow">
-            <img class="real-example__item" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
+            <img class="real-example__item real-example__item--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
           </div>
         </div>
         <div class="real-example__controls">
-          <label class="real-example__scale-before"><input type="radio" name="radio-example" value="before">Было</label>
-          <label class="real-example__scale-after"><input type="radio" name="radio-example" value="after">Стало</label>
-          <div class="real-example__toogls">
-            <div class="real-example__toogle-before"></div>
-            <div class="real-example__toogle-after"></div>
-          </div>
+          <button class="real-example__scale">Было</button>
+          <span class="real-example__toogls">
+            <span class="real-example__toogle"></span>
+          </span>
+          <button class="real-example__scale">Стало</button>
         </div>
+      </section>
       </section>
     </div>
   </main>
@@ -111,7 +111,6 @@
       <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
     <div class="contacts__map map">
-      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
     </div>
   </section>
 
