Форма на мобилке

--- a/source/program-form.html
+++ b/source/program-form.html
@@ -39,7 +39,7 @@
         <div class="picking-program__fieldset-wrapper">
           <fieldset class="picking-program__fieldset">
             <legend class="visually-hidden">Общие данные</legend>
-            <ul class="picking-program__list">
+            <ul class="picking-program__list-name">
               <li class="picking-program__item">
                 <label class="picking-program__label label"><span>Имя:<sup>*</sup></span>
                   <input class="picking-program__input-text input-text input" type="text" name="name" placeholder="Барсик">
@@ -113,7 +113,7 @@
         <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
           <legend class="picking-program__legend-additionally">Дополнительно</legend>
           <ul class="picking-program__list-additionally">
-            <li class="picking-program__item">
+            <li class="picking-program__item-additionally">
               <p>
                 <label class="checkbox">
                   <input class="visually-hidden checkbox__control" type="checkbox" name="sweetener">
@@ -121,7 +121,7 @@
                 </label>
               </p>
             </li>
-            <li class="picking-program__item">
+            <li class="picking-program__item-additionally">
               <p>
                 <label class="checkbox">
                   <input class="visually-hidden checkbox__control" type="checkbox" name="water">
@@ -129,7 +129,7 @@
                 </label>
               </p>
             </li>
-            <li class="picking-program__item">
+            <li class="picking-program__item-additionally">
               <p>
                 <label class="checkbox">
                   <input class="visually-hidden checkbox__control" type="checkbox" name="milk">
@@ -137,7 +137,7 @@
                 </label>
               </p>
             </li>
-            <li class="picking-program__item">
+            <li class="picking-program__item-additionally">
               <p>
                 <label class="checkbox">
                   <input class="visually-hidden checkbox__control" type="checkbox" name="vitamins">
